--- a/index.css
+++ b/index.css
@@ -13,6 +13,8 @@ nav a {
 
 nav a:hover {
 	background-color: #333333;
+	color: #ffffff;
+	text-decoration: none
 }
 
 nav:hover,
@@ -36,6 +38,10 @@ footer:hover {
 	background-image: url("nether.png");
 }
 
+.murrayboy123 {
+	background-image: url("murrayboy123.png");
+}
+
 body {
     margin: 0;
     background-position: center center;
@@ -50,18 +56,19 @@ body {
 	border-radius: 10px;
 	margin-left: 23%;
 	margin-right: 23%;
-	margin-bottom: 70px;
+	margin-bottom: 10px;
     text-align: center;
 	color: #000000;
 	padding: 1px 10px 1px 10px;
+	padding-bottom: 10px;
 }
 
-p a:hover {
+a:hover {
 	color: #000088;
 	text-decoration: underline;
 }
 
-p a {
+a {
 	text-decoration: none;
 	color: #000088;
 	font-weight: bold;
@@ -103,6 +110,7 @@ footer {
 footer {
 	bottom: 0;
 	border-top: 1px solid black;
+	margin-top: 60px;
 }
 
 nav {
@@ -125,4 +133,54 @@ p {
 
 .listheading {
 	font-size: 100%;
+}
+
+.big {
+	font-size: 120%;
+}
+
+.dropbtn {
+    background-color: #494949;
+    color: white;
+    padding: 5px;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    margin-top: 10px;
+    width: 200px;
+    height: 40px;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #999999;
+    width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #888888}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #333333;
 }
