--- a/index.css
+++ b/index.css
@@ -184,3 +184,15 @@ p {
 .dropdown:hover .dropbtn {
     background-color: #333333;
 }
+
+.texto {
+	background-color: rgba(255, 255, 255, 0.6);
+	border-radius: 10px;
+	margin-left: 23%;
+	margin-right: 23%;
+	margin-bottom: 75px;
+    text-align: center;
+	color: #000000;
+	padding: 1px 10px 1px 10px;
+	padding-bottom: 10px;
+}
